<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<TextView
        android:id="@+id/questThreeTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textSize="40sp"
        android:text="@string/question_three" />
	
	<RadioGroup
	    android:id="@+id/questThreeRadioGroup"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:layout_centerHorizontal="true"
    	android:layout_below="@id/questThreeTxtView"
    	android:layout_marginTop="16dp" >
    	
	    <RadioButton 
	        android:id="@+id/yesQuestThreeRadioBtn"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="30sp" 
        	android:text="@string/yes"
        	android:onClick="onQuestionThreeYesClicked" />
	    
	    <RadioButton 
	        android:id="@+id/noQuestThreeRadioBtn"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="30sp" 
        	android:text="@string/no"
        	android:onClick="onQuestionThreeNoClicked"/>
	    
	</RadioGroup>

</RelativeLayout>
